// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / DatePicker / Double DatePicker Controlled 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
}

.c0 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c2:hover {
  background-color: hsl(223.5,100%,45%);
}

.c2:active {
  background-color: hsl(223.5,100%,40%);
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        className="NormalizedButton__Button-ey7f5x-0 c2"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c3"
          >
            Next Date
          </span>
        </span>
      </button>
    </div>
    <div
      className="c1"
    >
      <button
        className="NormalizedButton__Button-ey7f5x-0 c2"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c3"
          >
            Next End Date
          </span>
        </span>
      </button>
    </div>
  </div>,
  .c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: 40px;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c7:focus {
  border-width: 1px;
}

.c7:hover {
  border-color: #4B4B46;
}

.c7:focus {
  border-color: #0046FF;
}

.c7::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c6 {
  position: relative;
  padding: 0px 0;
}

.c11 {
  z-index: 1;
  padding-left: 8px;
}

.c1 {
  z-index: 1;
  padding-right: 8px;
}

.c0 {
  width: 312px;
  display: inline-block;
}

<div>
    <div
      className="c0 c1"
    >
      <label
        className="c2"
        hidden={false}
      >
        <span
          className="c3"
        >
          <div
            className="c4"
          >
            Controlled 
          </div>
          <span
            className="c5"
          >
            <div
              className="c6"
            >
              <input
                autoComplete="off"
                className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
                data-testid="datepicker-input-start"
                id="controlled-start"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c8 c9"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c10"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
    <div
      className="c0 c11"
    >
      <label
        className="c2"
        hidden={false}
      >
        <span
          className="c3"
        >
          <div
            className="c4"
          >
            Controlled 
          </div>
          <span
            className="c5"
          >
            <div
              className="c6"
            >
              <input
                autoComplete="off"
                className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
                data-testid="datepicker-input-end"
                id="controlled-end"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c8 c9"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c10"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules / DatePicker / Double DatePicker Default 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: 40px;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c7:focus {
  border-width: 1px;
}

.c7:hover {
  border-color: #4B4B46;
}

.c7:focus {
  border-color: #0046FF;
}

.c7::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c6 {
  position: relative;
  padding: 0px 0;
}

.c11 {
  z-index: 1;
  padding-left: 8px;
}

.c1 {
  z-index: 1;
  padding-right: 8px;
}

.c0 {
  width: 312px;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <label
      className="c2"
      hidden={false}
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          Label 
        </div>
        <span
          className="c5"
        >
          <div
            className="c6"
          >
            <input
              autoComplete="off"
              className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
              data-testid="datepicker-input-start"
              id="input-id-start"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="dd/mm/yyyy"
              type="text"
              value=""
              variant="normal"
            />
            <div
              className="c8 c9"
              position="right"
              variant="normal"
            >
              <svg
                aria-hidden="true"
                className="c10"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                />
              </svg>
            </div>
          </div>
        </span>
      </span>
    </label>
  </div>
  <div
    className="c0 c11"
  >
    <span
      className="c5"
    >
      <div
        className="c6"
      >
        <input
          autoComplete="off"
          className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
          data-testid="datepicker-input-end"
          id="input-id-end"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="dd/mm/yyyy"
          type="text"
          value=""
          variant="normal"
        />
        <div
          className="c8 c9"
          position="right"
          variant="normal"
        >
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
            />
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / DatePicker / Double DatePicker Disabled Input 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: 40px;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #EBEBE8;
  padding-right: 40px;
}

.c7:focus {
  border-width: 1px;
}

.c7:focus {
  border-color: #0046FF;
}

.c7::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c7:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c7:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c7:disabled::placeholder {
  color: #A0A09B;
}

.c6 {
  position: relative;
  padding: 0px 0;
}

.c11 {
  z-index: 1;
  padding-left: 8px;
}

.c1 {
  z-index: 1;
  padding-right: 8px;
}

.c0 {
  width: 312px;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <label
      className="c2"
      hidden={false}
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          Disabled input 
        </div>
        <span
          className="c5"
        >
          <div
            className="c6"
          >
            <input
              autoComplete="off"
              className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
              data-testid="datepicker-input-start"
              disabled={true}
              id="disabled-input-start"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="dd/mm/yyyy"
              type="text"
              value=""
              variant="normal"
            />
            <div
              className="c8 c9"
              position="right"
              variant="normal"
            >
              <svg
                aria-hidden="true"
                className="c10"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                />
              </svg>
            </div>
          </div>
        </span>
      </span>
    </label>
  </div>
  <div
    className="c0 c11"
  >
    <span
      className="c5"
    >
      <div
        className="c6"
      >
        <input
          autoComplete="off"
          className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
          data-testid="datepicker-input-end"
          disabled={true}
          id="disabled-input-end"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="dd/mm/yyyy"
          type="text"
          value=""
          variant="normal"
        />
        <div
          className="c8 c9"
          position="right"
          variant="normal"
        >
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
            />
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / DatePicker / Double DatePicker Disallow Single Day Range 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: 40px;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c7:focus {
  border-width: 1px;
}

.c7:hover {
  border-color: #4B4B46;
}

.c7:focus {
  border-color: #0046FF;
}

.c7::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c6 {
  position: relative;
  padding: 0px 0;
}

.c11 {
  z-index: 1;
  padding-left: 8px;
}

.c1 {
  z-index: 1;
  padding-right: 8px;
}

.c0 {
  width: 312px;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <label
      className="c2"
      hidden={false}
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          Label 
        </div>
        <span
          className="c5"
        >
          <div
            className="c6"
          >
            <input
              autoComplete="off"
              className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
              data-testid="datepicker-input-start"
              id="input-id-start"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="dd/mm/yyyy"
              type="text"
              value=""
              variant="normal"
            />
            <div
              className="c8 c9"
              position="right"
              variant="normal"
            >
              <svg
                aria-hidden="true"
                className="c10"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                />
              </svg>
            </div>
          </div>
        </span>
      </span>
    </label>
  </div>
  <div
    className="c0 c11"
  >
    <span
      className="c5"
    >
      <div
        className="c6"
      >
        <input
          autoComplete="off"
          className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
          data-testid="datepicker-input-end"
          id="input-id-end"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="dd/mm/yyyy"
          type="text"
          value=""
          variant="normal"
        />
        <div
          className="c8 c9"
          position="right"
          variant="normal"
        >
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
            />
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / DatePicker / Double DatePicker Same Week Disabled 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: 40px;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c7:focus {
  border-width: 1px;
}

.c7:hover {
  border-color: #4B4B46;
}

.c7:focus {
  border-color: #0046FF;
}

.c7::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c6 {
  position: relative;
  padding: 0px 0;
}

.c11 {
  z-index: 1;
  padding-left: 8px;
}

.c1 {
  z-index: 1;
  padding-right: 8px;
}

.c0 {
  width: 312px;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <label
      className="c2"
      hidden={false}
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          Disabled dates on same week 
        </div>
        <span
          className="c5"
        >
          <div
            className="c6"
          >
            <input
              autoComplete="off"
              className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
              data-testid="datepicker-input-start"
              id="disable-dates-input-start"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="dd/mm/yyyy"
              type="text"
              value=""
              variant="normal"
            />
            <div
              className="c8 c9"
              position="right"
              variant="normal"
            >
              <svg
                aria-hidden="true"
                className="c10"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                />
              </svg>
            </div>
          </div>
        </span>
      </span>
    </label>
  </div>
  <div
    className="c0 c11"
  >
    <span
      className="c5"
    >
      <div
        className="c6"
      >
        <input
          autoComplete="off"
          className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
          data-testid="datepicker-input-end"
          id="disable-dates-input-end"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="dd/mm/yyyy"
          type="text"
          value=""
          variant="normal"
        />
        <div
          className="c8 c9"
          position="right"
          variant="normal"
        >
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
            />
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / DatePicker / Double DatePicker Same Week Enabled 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: 40px;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c7:focus {
  border-width: 1px;
}

.c7:hover {
  border-color: #4B4B46;
}

.c7:focus {
  border-color: #0046FF;
}

.c7::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c6 {
  position: relative;
  padding: 0px 0;
}

.c11 {
  z-index: 1;
  padding-left: 8px;
}

.c1 {
  z-index: 1;
  padding-right: 8px;
}

.c0 {
  width: 312px;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <label
      className="c2"
      hidden={false}
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          Only enabled dates in same week 
        </div>
        <span
          className="c5"
        >
          <div
            className="c6"
          >
            <input
              autoComplete="off"
              className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
              data-testid="datepicker-input-start"
              id="enable-dates-input-start"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="dd/mm/yyyy"
              type="text"
              value=""
              variant="normal"
            />
            <div
              className="c8 c9"
              position="right"
              variant="normal"
            >
              <svg
                aria-hidden="true"
                className="c10"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                />
              </svg>
            </div>
          </div>
        </span>
      </span>
    </label>
  </div>
  <div
    className="c0 c11"
  >
    <span
      className="c5"
    >
      <div
        className="c6"
      >
        <input
          autoComplete="off"
          className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
          data-testid="datepicker-input-end"
          id="enable-dates-input-end"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="dd/mm/yyyy"
          type="text"
          value=""
          variant="normal"
        />
        <div
          className="c8 c9"
          position="right"
          variant="normal"
        >
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
            />
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;
